--- a/SQL/sqlvector.ipynb
+++ b/SQL/sqlvector.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "#!connect mssql --kernel-name Stackoverflow --connection-string \"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=HasanSavran90;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\"\""
+    "#!connect mssql --kernel-name Stackoverflow --connection-string \"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\"\""
    ]
   },
   {
