--- a/SQL/Sql.ipynb
+++ b/SQL/Sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "37e38e94",
    "metadata": {
     "polyglot_notebook": {
@@ -56,7 +56,7 @@
     "using System.Data.SqlClient;\n",
     "\n",
     "// Define the connection string to connect to the SQL Server database\n",
-    "var cmd = new SqlConnection(\"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=HasanSavran90;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\");\n",
+    "var cmd = new SqlConnection(\"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\");\n",
     "cmd.Open();\n",
     "Console.WriteLine(\"Connection Opened\");\n",
     "// run a query to get the top 10 rows from the Employees table\n",
