--- a/Setup/Builder.ipynb
+++ b/Setup/Builder.ipynb
@@ -57,7 +57,7 @@
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
     "var client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
     "var newdb = await client.CreateDatabaseIfNotExistsAsync(\"StackOverflow\");\n",
-    "ContainerProperties props = new ContainerProperties(\"Posts0\", \"/OwnerUserId\");\n",
+    "ContainerProperties props = new ContainerProperties(\"Posts\", \"/OwnerUserId\");\n",
     "var db = client.GetDatabase(\"StackOverflow\");\n",
     "var postContainer = await db.CreateContainerIfNotExistsAsync(props, throughput: 4000);\n"
    ]
