--- a/Labs/Lab1 - Connect.ipynb
+++ b/Labs/Lab1 - Connect.ipynb
@@ -65,7 +65,9 @@
    "metadata": {},
    "source": [
     "Open the Azure Cosmos DB Emulator or your Azure Subscription and find the connection strings\n",
+    "\n",
     "Declare object named client using CosmosClient constructor.\n",
+    "\n",
     "Use the connection string\n",
     "\n",
     "CosmosClientOptions parameter is optional and it has many useful options. Take a look at CosmosClient file under Study directory to learn more about it.\n",
@@ -85,9 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
-    "var client = new CosmosClient(cstring);\n",
-    "client.Display();"
+    "// Create a new CosmosClient object"
    ]
   },
   {
@@ -99,7 +99,10 @@
     "Create a new container named \"Posts\". Use the \"/OwnerUserId\" property as partition key\n",
     "\n",
     "Don't forget everything is case-sensitive!!\n",
-    "Explore the new database and container properties by using Display() function."
+    "\n",
+    "Explore the new database and container properties by using Display() function.\n",
+    "\n",
+    "Use 2. CreateDB file in Study"
    ]
   },
   {
@@ -112,10 +115,9 @@
    },
    "outputs": [],
    "source": [
-    "var db = await client.CreateDatabaseIfNotExistsAsync(\"StackOverflow\");\n",
-    "var container = await db.Database.CreateContainerIfNotExistsAsync(\"Posts\", \"/OwnerUserId\");\n",
-    "db.Display();\n",
-    "container.Display();"
+    "// Create a new database named StackOverflow\n",
+    "\n",
+    "//Create a new container named Posts. Use the /OwnerUserId property as partition key"
    ]
   }
  ],
