--- a/Labs/Lab2 - CRUD.ipynb
+++ b/Labs/Lab2 - CRUD.ipynb
@@ -41,11 +41,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7112fd8",
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#r \"nuget: Newtonsoft.Json\"\n",
+    "#r \"nuget: Microsoft.Azure.Cosmos\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fbef78c9",
    "metadata": {},
    "source": [
-    "First reference Cosmos DB nuget package then declare a CosmosClient using your connection string from Azure Cosmos DB Emulator or Azure subscription"
+    "Declare a CosmosClient using your connection string from Azure Cosmos DB Emulator or Azure subscription"
    ]
   },
   {
@@ -67,8 +85,10 @@
    "metadata": {},
    "source": [
     "We are ready to insert a document.\n",
+    "\n",
     "To do that, you need to specify which database and container you like to use.\n",
-    "Use GetDatabase() and GetContainer functions of CosmosClient"
+    "\n",
+    "Initialize the database and container objects. Use the database and container you created in Lab1"
    ]
   },
   {
@@ -81,8 +101,8 @@
    },
    "outputs": [],
    "source": [
-    "// Find the database\n",
-    "// Find the container in the database"
+    "// Initialize the database\n",
+    "// Initialize the container"
    ]
   },
   {
@@ -112,11 +132,16 @@
    "metadata": {},
    "source": [
     "Insert the new Post object into the Posts container.\n",
+    "\n",
     "You need to use CreateItemAsync function of the container.\n",
+    "\n",
     "You need to know the partition key of Posts container to complete this task.\n",
     "\n",
     "Find how much Request Units this operation cost you.\n",
-    "You can use Display() function to output any results."
+    "\n",
+    "You can use Display() function to output any results.\n",
+    "\n",
+    "Use 4.CRUD file in the Study folder for a reference."
    ]
   },
   {
@@ -138,9 +163,63 @@
    "id": "8b16500f",
    "metadata": {},
    "source": [
-    "Query the new post you inserted\n",
-    "Update It\n",
-    "Read it to see changes\n"
+    "Query the new post you inserted.\n",
+    "\n",
+    "Update a property \n",
+    "\n",
+    "Point Read the document using partition key and documentid\n",
+    "\n",
+    "Use 4.CRUD file in Study folder as a reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Query the new post you inserted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Change value of a property of the retrieved post object.\n",
+    "\n",
+    "// Update the post object in the container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Use Point Read operation to read the document again and see the changes."
    ]
   }
  ],
