--- a/Labs/Lab4 - AI.ipynb
+++ b/Labs/Lab4 - AI.ipynb
@@ -158,6 +158,18 @@
     "\n",
     "Use 10. Vector Seach file in Study folder as a reference."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de32fc76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Generate a vector for string \"Find the common database topics\"\n",
+    "\n",
+    "// Run a query using Cosmos DB vector function to find similar vectors in database."
+   ]
   }
  ],
  "metadata": {
