--- a/Labs/Lab2 - CRUD.ipynb
+++ b/Labs/Lab2 - CRUD.ipynb
@@ -69,6 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d250658",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -94,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5a5b82cd",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -116,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4dcf20c9",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -147,6 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6840c9a9",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -163,18 +167,14 @@
    "id": "8b16500f",
    "metadata": {},
    "source": [
-    "Query the new post you inserted.\n",
-    "\n",
-    "Update a property \n",
-    "\n",
-    "Point Read the document using partition key and documentid\n",
-    "\n",
-    "Use 4.CRUD file in Study folder as a reference."
+    "Write a query to retrieve the new post you just inserted.\n",
+    "You can use 4.CRUD file in Study folder as a reference for the following questions."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7f4667d",
    "metadata": {
     "language_info": {
      "name": "polyglot-notebook"
@@ -189,8 +189,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f10bbac",
+   "metadata": {},
+   "source": [
+    "Update a field in queried post then update the document in Cosmos DB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5dfc7be",
    "metadata": {
     "language_info": {
      "name": "polyglot-notebook"
@@ -207,8 +216,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f441f4f",
+   "metadata": {},
+   "source": [
+    "Use Point Read operation to read updated post."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a1017f6",
    "metadata": {
     "language_info": {
      "name": "polyglot-notebook"
