--- a/Labs/Lab3 - Indexing.ipynb
+++ b/Labs/Lab3 - Indexing.ipynb
@@ -7,15 +7,15 @@
    "source": [
     "Indexing Policy LAB\n",
     "\n",
-    "Open the Cosmos DB Emulator. (https://localhost:8081/_explorer/index.html)\n",
+    "Open the Azure Cosmos DB Emulator. (https://localhost:8081/_explorer/index.html)\n",
     "\n",
-    "Find your database and container.\n",
+    "Find the database and container you created.\n",
     "\n",
-    "Click on Scale & Settings\n",
+    "Click on Scale & Settings.\n",
     "\n",
-    "Click on Indexing Policy\n",
+    "Click on Indexing Policy.\n",
     "\n",
-    "Exclude the following properties\n",
+    "Add the following properties to Exclusion list\n",
     "\n",
     "        PostBody\n",
     "        OwnerDisplayName"
