--- a/Labs/Lab4 - AI.ipynb
+++ b/Labs/Lab4 - AI.ipynb
@@ -10,6 +10,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "5a2b1225",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Azure, 1.0.6</span></li><li><span>Azure.AI.OpenAI, 2.1.0</span></li><li><span>Azure.Identity, 1.16.0</span></li><li><span>Microsoft.Azure.Cosmos, 3.53.1</span></li><li><span>Newtonsoft.Json, 13.0.4</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#r \"nuget: Azure.AI.OpenAI\"\n",
+    "#r \"nuget: Azure.Identity\"\n",
+    "#r \"nuget: Azure\"\n",
+    "#r \"nuget: Newtonsoft.Json\"\n",
+    "#r \"nuget: Microsoft.Azure.Cosmos\"\n",
+    "\n",
+    "using Azure;\n",
+    "using Azure.AI.OpenAI;\n",
+    "using Azure.Identity;\n",
+    "using OpenAI.Embeddings;\n",
+    "using Newtonsoft.Json;\n",
+    "using Newtonsoft.Json.Linq;\n",
+    "using System.Net.Http;\n",
+    "using System.Collections.ObjectModel;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "8f33fd36",
    "metadata": {},
