--- a/SQL/sqlvector.ipynb
+++ b/SQL/sqlvector.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -154,8 +154,8 @@
    "outputs": [],
    "source": [
     "var openAIClient = new AzureOpenAIClient(\n",
-    "    new Uri(\"https://savranweb.openai.azure.com/\"),\n",
-    "    new AzureKeyCredential(\"3Qg3P8Fw37qaN3ZtG2JJapZZVjBFTKvOIDaIYXoL5a5fduu3wz2XJQQJ99BDACYeBjFXJ3w3AAABACOGPUlQ\"));\n",
+    "    new Uri(\"\"),\n",
+    "    new AzureKeyCredential(\"\"));\n",
     "var aiclient = openAIClient.GetEmbeddingClient(\"embedding\");"
    ]
   },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -281,7 +281,7 @@
     "}\n",
     "//inserttable.Rows.Count.Display();\n",
     "//inserttable.Rows[0].Display();\n",
-    "using (var connection = new Microsoft.Data.SqlClient.SqlConnection(\"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=HasanSavran90;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\"))\n",
+    "using (var connection = new Microsoft.Data.SqlClient.SqlConnection(\"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\"))\n",
     "{\n",
     "    connection.Open();\n",
     "    using (var transaction = connection.BeginTransaction())\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -337,7 +337,7 @@
     "  Posts\n",
     "ORDER BY distance \";\n",
     "  var texttosummary  =\"\";\n",
-    "using (var connection = new Microsoft.Data.SqlClient.SqlConnection(\"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=HasanSavran90;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\"))\n",
+    "using (var connection = new Microsoft.Data.SqlClient.SqlConnection(\"Server=tcp:hsavransql1.database.windows.net,1433;Initial Catalog=azuredb1;Persist Security Info=False;User ID=hsavran;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;\"))\n",
     "{\n",
     "    connection.Open();\n",
     "    using (var command = new Microsoft.Data.SqlClient.SqlCommand(cmd, connection))\n",
