--- a/Setup/Builder.ipynb
+++ b/Setup/Builder.ipynb
@@ -121,7 +121,7 @@
     "var postList = JsonConvert.DeserializeObject<List<Post>>(json);\n",
     "postList.Count.Display(); // Display the number of posts\n",
     "//write the post to the container in bulk mode\n",
-    "var postContainer = db.GetContainer(\"Posts0\");\n",
+    "var postContainer = db.GetContainer(\"Posts\");\n",
     "foreach (var post in postList)\n",
     "{        \n",
     "    var response = await postContainer.CreateItemAsync(post, new PartitionKey(post.OwnerUserId));\n",
